# wordle-cli

./: Cargo.toml  README.md
src/: cli.rs  game.rs  lib.rs  main.rs  storage.rs  tui.rs
src/storage/: cache.rs  share.rs
