[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
ratatui = "0.25.0"
crossterm = "0.27.0"
thousands = "0.2.0"
